--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-kotlin = "1.9.10"
-compose = "1.5.2"
+kotlin = "1.9.20"
+compose = "1.5.10"
 coroutines = "1.7.3"
 maven-publish = "0.25.3"
 kotlinx-datetime = "0.4.0"
@@ -9,6 +9,7 @@ window-size = "0.3.0"
 appyx-version = "2.0.0-alpha09"
 exposed-version = "0.44.0"
 sqlite-jdbc-version = "3.30.1"
+markdown-parser-version = "0.5.0"
 
 
 [plugins]
@@ -32,3 +33,4 @@ exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datet
 exposed-json = { module = "org.jetbrains.exposed:exposed-json", version.ref = "exposed-version" }
 exposed-money = { module = "org.jetbrains.exposed:exposed-money", version.ref = "exposed-version" }
 sqlite-jdbc = { module = "org.xerial:sqlite-jdbc", version.ref = "sqlite-jdbc-version" }
+markdown-parser = { module = "org.jetbrains:markdown", version.ref = "markdown-parser-version" }
