--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ exposed-version = "0.44.0"
 sqlite-jdbc-version = "3.30.1"
 markdown-parser-version = "0.5.0"
 file-picker-version = "2.1.0"
+koin = "3.4.3"
+koin-compose = "1.0.4"
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
@@ -35,3 +37,5 @@ exposed-money = { module = "org.jetbrains.exposed:exposed-money", version.ref = 
 sqlite-jdbc = { module = "org.xerial:sqlite-jdbc", version.ref = "sqlite-jdbc-version" }
 markdown-parser = { module = "org.jetbrains:markdown", version.ref = "markdown-parser-version" }
 file-picker = { module = "com.darkrockstudios:mpfilepicker", version.ref = "file-picker-version" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose"}
