--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,9 @@ kotlinx-coroutines-play-services = { module = "org.jetbrains.kotlinx:kotlinx-cor
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 window-size = { module = "dev.chrisbanes.material3:material3-window-size-class-multiplatform", version.ref = "window-size" }
-appyx = { module = "com.bumble.appyx:appyx-navigation", version.ref = "appyx-version" }
+appyx-navigation = { module = "com.bumble.appyx:appyx-navigation", version.ref = "appyx-version" }
+appyx-interactions = { module = "com.bumble.appyx:appyx-interactions", version.ref = "appyx-version" }
+appyx-backstack = { module = "com.bumble.appyx:backstack", version.ref = "appyx-version" }
 exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed-version" }
 exposed-crypt = { module = "org.jetbrains.exposed:exposed-crypt", version.ref = "exposed-version" }
 exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed-version" }
@@ -38,4 +40,4 @@ sqlite-jdbc = { module = "org.xerial:sqlite-jdbc", version.ref = "sqlite-jdbc-ve
 markdown-parser = { module = "org.jetbrains:markdown", version.ref = "markdown-parser-version" }
 file-picker = { module = "com.darkrockstudios:mpfilepicker", version.ref = "file-picker-version" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
-koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose"}
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose" }
