--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: jvmTest
+          - target: test
             os: ubuntu-latest
     runs-on: ${{ matrix.os }}
 
