--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: tests
 
 on:
   push:
@@ -38,4 +38,4 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@ce999babab2de1c4b649dc15f0ee67e6246c994f
       with:
-        arguments: ${{ matrix.target }} --scan
+        arguments: ${{ matrix.target }}
