parent fe7706d57474d0508515ca1db510c9d063c86c2b author pank-su <frostkslo1@yandex.ru> 1701075960 +0300 committer pank-su <frostkslo1@yandex.ru> 1701162252 +0300
ci: update telegram message

Update gradle.yml

ci: update telegram message

ci: update telegram message

ci: update telegram message

ci: update telegram message

ci: update telegram message

ci: update telegram message

ci: need build

ci: always works

ci: fix

Update telegram.yaml

test commit

Update telegram.yaml

test commit

ci: add meme.mp4

ci: fix ci

test

--- a/.github/workflows/telegram.yaml
+++ b/.github/workflows/telegram.yaml
@@ -1,23 +1,55 @@
 name: telegram message
 
 on:
-  pull_request_target:
+  pull_request:
+    branches: [ "master" ]
     types:
       - opened
       - reopened
-jobs:
+      - closed
 
+jobs:
   build:
-    name: Build
+    uses: ./.github/workflows/gradle.yml
+  message:
     runs-on: ubuntu-latest
+    if: ${{ always() }}
+    needs: build
     steps:
-      - name: send telegram message on push
+      - if: ${{ github.event.pull_request.merged }}
+        name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.GROUP_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: |
-            ${{ github.actor }} сделал пулл реквестик:
+            🎉🎉🎉Произошло слияние: ${{ github.event.pull_request.title }}
+          video: .github/workflows/content/meme.mp4
+      - if: ${{ !contains(needs.*.result, 'failure') && !github.event.pull_request.merged }}
+        name: send telegram message on push
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.GROUP_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            ${{ github.actor }} создал пулл реквестик:
             ${{ github.event.pull_request.title }}
 
+            Тестики: ✅
+
             Ссылочка: https://github.com/${{ github.repository }}/pull/${{ github.event.number }}
+      - if: ${{ contains(needs.*.result, 'failure') && !github.event.pull_request.merged }}
+        name: send telegram message on push
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.GROUP_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            ${{ github.actor }} создал пулл реквестик:
+            ${{ github.event.pull_request.title }}
+
+            Тестики: ❌
+
+            Ссылочка: https://github.com/${{ github.repository }}/pull/${{ github.event.number }}
+
+        
