--- a/.github/workflows/telegram.yaml
+++ b/.github/workflows/telegram.yaml
@@ -9,13 +9,10 @@ on:
       - closed
 
 jobs:
-  build:
+  build & message:
     uses: ./.github/workflows/gradle.yml
-  message:
-    name: Send message
-    runs-on: ubuntu-latest
-    steps:
-      - if: ${{ always() && contains(needs.*.result, 'failure') }}
+    runs:
+      - if: ${{ success() }}
         name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
@@ -24,11 +21,11 @@ jobs:
           message: |
             ${{ github.actor }} создал пулл реквестик:
             ${{ github.event.pull_request.title }}
-            
+
             Тестики: ❌
-            
+
             Ссылочка: https://github.com/${{ github.repository }}/pull/${{ github.event.number }}
-      - if: ${{ always() && !contains(needs.*.result, 'failure') }}
+      - if: ${{ failure() }}
         name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
@@ -37,8 +34,9 @@ jobs:
           message: |
             ${{ github.actor }} создал пулл реквестик:
             ${{ github.event.pull_request.title }}
-            
+
             Тестики: ✅
-            
+
             Ссылочка: https://github.com/${{ github.repository }}/pull/${{ github.event.number }}
+
         
