ci: update telegram message

--- a/.github/workflows/telegram.yaml
+++ b/.github/workflows/telegram.yaml
@@ -10,8 +10,10 @@ on:
 
 jobs:
   build & message:
-    uses: ./.github/workflows/gradle.yml
-    runs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: tests
+        uses: ./.github/workflows/gradle.yml
       - if: ${{ success() }}
         name: send telegram message on push
         uses: appleboy/telegram-action@master
