--- a/.github/workflows/telegram.yaml
+++ b/.github/workflows/telegram.yaml
@@ -12,6 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     uses: ./.github/workflows/gradle.yml
+  message:
     steps:
       - if: ${{ success() }}
         name: send telegram message on push
