--- a/.github/workflows/telegram.yaml
+++ b/.github/workflows/telegram.yaml
@@ -13,6 +13,7 @@ jobs:
     uses: ./.github/workflows/gradle.yml
   message:
     runs-on: ubuntu-latest
+    if: ${{ always() }}
     needs: build
     steps:
       - if: ${{ success() }}
