--- a/.github/workflows/telegram.yaml
+++ b/.github/workflows/telegram.yaml
@@ -16,7 +16,7 @@ jobs:
     if: ${{ always() }}
     needs: build
     steps:
-      - if: ${{ success() }}
+      - if: ${{ !contains(needs.*.result, 'failure') }}
         name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
@@ -29,7 +29,7 @@ jobs:
             Тестики: ✅
 
             Ссылочка: https://github.com/${{ github.repository }}/pull/${{ github.event.number }}
-      - if: ${{ failure() }}
+      - if: ${{ contains(needs.*.result, 'failure') }}
         name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
