--- a/.github/workflows/telegram.yaml
+++ b/.github/workflows/telegram.yaml
@@ -16,7 +16,7 @@ jobs:
     if: ${{ always() }}
     needs: build
     steps:
-      - if: ${{ github.event.pull_request.merged == 'true' }}
+      - if: ${{ github.event.pull_request.merged }}
         name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
@@ -25,7 +25,7 @@ jobs:
           message: |
             🎉🎉🎉Произошло слияние: ${{ github.event.pull_request.title }}
           photo: https://i.gifer.com/9NM.gif
-      - if: ${{ !contains(needs.*.result, 'failure') && github.event.pull_request.merged == 'false' }}
+      - if: ${{ !contains(needs.*.result, 'failure') && !github.event.pull_request.merged }}
         name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
@@ -38,7 +38,7 @@ jobs:
             Тестики: ✅
 
             Ссылочка: https://github.com/${{ github.repository }}/pull/${{ github.event.number }}
-      - if: ${{ contains(needs.*.result, 'failure') && github.event.pull_request.merged == 'false' }}
+      - if: ${{ contains(needs.*.result, 'failure') && !github.event.pull_request.merged }}
         name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
