--- a/.github/workflows/telegram.yaml
+++ b/.github/workflows/telegram.yaml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   build:
+    if: ${{ !github.event.pull_request.merged }}
     uses: ./.github/workflows/gradle.yml
   message:
     runs-on: ubuntu-latest
