--- a/.github/workflows/telegram.yaml
+++ b/.github/workflows/telegram.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           to: ${{ secrets.GROUP_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          format: markdown
           message: |
             🎉🎉🎉Произошло слияние: ${{ github.event.pull_request.title }}
             ```
