--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ koin = "3.5.0"
 koin-compose = "1.1.0"
 kotlinx-io = "0.3.0"
 logger = "2.0.9"
-
+webview = "1.7.6"
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
@@ -58,3 +58,4 @@ kotlinx-io = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version.ref = "
 
 logger = { module = "org.slf4j:slf4j-simple", version.ref = "logger" }
 
+webview = {module = "io.github.kevinnzou:compose-webview-multiplatform", version.ref = "webview"}
